Title & badges look correct. Unsubscribe was commented out. Dropdown arrow is out of place

--- a/styles/_CRNBadge.scss
+++ b/styles/_CRNBadge.scss
@@ -7,7 +7,7 @@
   border-radius: 900px;
   padding: 2px 6px;
   max-width: fit-content;
-  margin-left: 10px;
+  margin-right: 10px;
 
   &__text {
     font-size: 14px;
